fixed sidebar shifting bug, etc fixes

--- a/styles/Contact.module.scss
+++ b/styles/Contact.module.scss
@@ -1,11 +1,12 @@
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start;
   text-align: left;
   width: 95%;
-  height: 700px;
+  height: 100%;
+  max-height: 100vh;
   overflow: hidden;
 
   @media screen and (max-width: 620px) {
@@ -22,7 +23,6 @@
   flex-direction: column;
   align-items: flex-start;
   flex-wrap: wrap;
-  height: 100%;
 }
 
 .cursor {
