--- a/styles/Portfolio.module.scss
+++ b/styles/Portfolio.module.scss
@@ -2,12 +2,11 @@
   display: flex;
   flex-direction: column;
   width: 95%;
-  height: 750px;
-  overflow: hidden;
+  height: 100%;
+  max-height: 100vh;
+  overflow: scroll;
+  justify-content: center;
 
-  @media screen and (max-width: 620px) {
-    overflow: scroll;
-  }
 }
 
 .portContainer {
