--- a/styles/Resume.module.scss
+++ b/styles/Resume.module.scss
@@ -9,12 +9,13 @@
 }
 
 .pdf {
-  width: 50vw;
+  width: 38.6vh;
   height: 50vh;
   overflow: hidden;
 
   @media screen and (max-width: 620px) {
-    width: 70vw;
+    width: 60vw;
+    height: 77.6vw;
   }
 }
 
